# slopcheck

./: .coverage.claude.pid506.XSL0qixx.HHg8HV6FZV2h  .gitignore  .pre-commit-config.yaml  .slopcheck  CODE_REVIEW.md  README.md  action.yml  install.ps1  pyproject.toml
.github/workflows/: ci.yml  slopcheck.yml
demo/: requirements.txt
slopcheck/: __init__.py  __main__.py  allowlist.py  cli.py  detect.py  fixer.py  parsers.py  registries.py
tests/: test_allowlist.py  test_cli.py  test_detect.py  test_fixer.py  test_parsers.py
